[gd_scene load_steps=3 format=3 uid="uid://b1yxhxgyqagug"]

[ext_resource type="Script" path="res://action/ui/action_selection.gd" id="1_bdfc4"]
[ext_resource type="PackedScene" uid="uid://dji6noqfedsmf" path="res://action/ui/action_card.tscn" id="2_xl1gj"]

[node name="ActionSelection" type="CanvasLayer"]
script = ExtResource("1_bdfc4")

[node name="ActionCard1" parent="." instance=ExtResource("2_xl1gj")]
unique_name_in_owner = true
offset_left = 144.0
offset_top = 103.0
offset_right = 425.0
offset_bottom = 558.0

[node name="ActionCard2" parent="." instance=ExtResource("2_xl1gj")]
unique_name_in_owner = true
offset_left = 449.0
offset_top = 109.0
offset_right = 731.0
offset_bottom = 564.0

[node name="ActionCard3" parent="." instance=ExtResource("2_xl1gj")]
unique_name_in_owner = true
offset_left = 758.0
offset_top = 104.0
offset_right = 1029.0
offset_bottom = 561.0

[connection signal="action_card_clicked" from="ActionCard1" to="." method="_on_action_card_1_action_card_clicked"]
[connection signal="action_card_clicked" from="ActionCard2" to="." method="_on_action_card_2_action_card_clicked"]
[connection signal="action_card_clicked" from="ActionCard3" to="." method="_on_action_card_3_action_card_clicked"]
